[gd_scene load_steps=4 format=3 uid="uid://b66kft32gxy0t"]

[ext_resource type="Script" path="res://Effects/scripts/movetest.gd" id="1_oqnr4"]
[ext_resource type="PackedScene" uid="uid://b80x0udp7puvp" path="res://Effects/eff.tscn" id="2_klml3"]

[sub_resource type="SphereMesh" id="SphereMesh_ivjj7"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_oqnr4")

[node name="mid_start" type="Marker2D" parent="."]
position = Vector2(339, 95)

[node name="end_l" type="Marker2D" parent="."]
position = Vector2(114, 95)

[node name="end_r" type="Marker2D" parent="."]
position = Vector2(600, 95)

[node name="object" type="MeshInstance2D" parent="."]
position = Vector2(317, 350)
scale = Vector2(36, 36)
mesh = SubResource("SphereMesh_ivjj7")

[node name="try" parent="." instance=ExtResource("2_klml3")]
position = Vector2(735, 372)

[editable path="try"]
